<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
     >

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName" 
        android:layout_marginBottom="15sp"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" 
        android:layout_marginBottom="15sp"
        
        />

    <EditText
        android:id="@+id/editText_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_telefono"
        android:layout_marginBottom="15sp"
        android:inputType="phone" />

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ingresar"
        android:background="@color/fondoBotones"
        android:textColor="@color/textoBotones"
                
        />

</LinearLayout>
